[package]
name = "lodepng"
version = "0.1.0"
authors = ["Peter Atashian <retep998@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/retep998/lodepng-rs"
description = "Simple wrapper around lodepng"
links = "lodepng"
build = "build.rs"

[dependencies]
image = { version = "0.17", default-features = false }
libc = "0.2"

[build-dependencies]
cc = "1.0"
